static_library("common") {
  configs += [ "//build/config:common_config" ]
  sources = [
    "bcd.h",
    "clamp.h",
    "critical_section.h",
    "device.cpp",
    "device.h",
    "diag.cpp",
    "diag.h",
    "draw.h",
    "error.cpp",
    "error.h",
    "file.h",
    "file_posix.cpp",
    "guid.h",
    "memory_manager.cpp",
    "memory_manager.h",
    "ring_buffer.h",
    "sampling_rate_converter.cpp",
    "sampling_rate_converter.h",
    "scheduler.cpp",
    "scheduler.h",
    "sequencer.cpp",
    "sequencer.h",
    "sha1.cpp",
    "sha1.h",
    "sound_source.h",
    "status.h",
    "time_keeper.cpp",
    "time_keeper.h",
    "toast.h",
    "types.h",
    "version.h",
  ]
}

source_set("common_unittests") {
  configs += [ "//build/config:common_config" ]
  sources = [
    "common_unittest.cpp",
    "sha1_unittest.cpp",
  ]
  deps = [
    ":common",
    "//testing/gtest:gtest",
  ]
}
