static_library("pc88") {
  configs += [ "//build/config:common_config" ]
  sources = [
    "base.cpp",
    "base.h",
    "beep.cpp",
    "beep.h",
    "calendar.cpp",
    "calendar.h",
    "config.h",
    "crtc.cpp",
    "crtc.h",
    "disk_manager.cpp",
    "disk_manager.h",
    "fdc.cpp",
    "fdc.h",
    "fdu.cpp",
    "fdu.h",
    "floppy.cpp",
    "floppy.h",
    "interrupt_controller.cpp",
    "interrupt_controller.h",
    "ioview.cpp",
    "ioview.h",
    "joypad.cpp",
    "joypad.h",
    "kanjirom.cpp",
    "kanjirom.h",
    "memory.cpp",
    "memory.h",
    "memview.cpp",
    "memview.h",
    "mouse.cpp",
    "mouse.h",
    "opn_interface.cpp",
    "opn_interface.h",
    "pc88.cpp",
    "pc88.h",
    "pd8257.cpp",
    "pd8257.h",
    "pio.cpp",
    "pio.h",
    "screen.cpp",
    "screen.h",
    "sio.cpp",
    "sio.h",
    "sound.cpp",
    "sound.h",
    "subsys.cpp",
    "subsys.h",
    "tape_manager.cpp",
    "tape_manager.h",
  ]
}
