static_library("m88win") {
  configs += [ "//build/config:common_config" ]
  sources = [
    "88config.cpp",
    "88config.h",
    "about.cpp",
    "about.h",
    "cfgpage.cpp",
    "cfgpage.h",
    "dderr.cpp",
    "dderr.h",
    "draw_dds.cpp",
    "draw_dds.h",
    "draw_ddw.cpp",
    "draw_ddw.h",
    "draw_gdi.cpp",
    "draw_gdi.h",
    "file.cpp",
    "file_finder.h",
    "filetest.cpp",
    "filetest.h",
    "guid.cpp",
    "main.cpp",
    "messages.h",
    "module.cpp",
    "module.h",
    "newdisk.cpp",
    "newdisk.h",
    "resource.h",
    "sounddrv.h",
    "soundds.cpp",
    "soundds.h",
    "soundds2.cpp",
    "soundds2.h",
    "soundwo.cpp",
    "soundwo.h",
    "status_impl.h",
    "status.cpp",
    "ui.cpp",
    "ui.h",
    "wincfg.cpp",
    "wincfg.h",
    "wincore.cpp",
    "wincore.h",
    "windraw.cpp",
    "windraw.h",
    "winexapi.cpp",
    "winexapi.h",
    "winjoy.cpp",
    "winjoy.h",
    "winkeyif.cpp",
    "winkeyif.h",
    "winmouse.cpp",
    "winmouse.h",
    "winsound.cpp",
    "winsound.h",
  ]

  deps = [
    "//src/win32/monitors:monitors",
    "//third_party/zlib:zlib",
  ]
}
